upgrade to tomcat-6 (partial)
git-svn-id: http://scarab.tigris.org/svn/scarab@11340 3c7165bb-d2ef-0310-b724-bafd9a86081f